@@ -3,7 +3,11 @@ v2.9.9   - Added stereo interlaced, interlaced columns and
 	 - Fixed color queries to support stereo interlaced and
 	   checkerboard.
 	 - Added saving and loading of stereo images in reels.
+	 - Added option to load stereo image on an already loaded
+	   image.
 	 - Added youtube videos to documentation.
+	 - Fixed cache line in timeline when in EDL mode and 
+	   with edits.
 
 v2.9.8   - Bug fixed OpenEXR reader for multipart image files that
 	   are not stereo images.  Previously the files would show
